# stonehearth_clone

./: Cargo.toml
assets/: 256-Palette.gpl  Mesher_Tester.vox  Test_Scene.vox  colour_match_case.txt  voxel_data.txt
assets/item_templates/materials/: stone.item.ron
assets/item_templates/melee_weapons/: test_sword.item.ron
assets/item_voxels/melee_weapons/: test_sword.vox
src/: building.rs  main.rs  palette_gen.rs
src/items/: item.rs  item_meshes.rs  item_template.rs  mod.rs
src/loading/: mod.rs
src/maths/: mod.rs  octave_simplex_2d.rs  selective_noise.rs  simplex_2d.rs
src/terrain/: chunks.rs  mod.rs  terrain_gen.rs
src/ui/: main_menu.rs  mod.rs  system_button.rs
src/voxels/: mesh_upgrade.rs  mod.rs  vox_reader.rs  voxel_mesher.rs  voxel_texturing.rs  voxels.rs
