[package]
name = "stonehearth_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avian3d = "0.1.0"
bevy = "0.14.0"
bevy_panorbit_camera = "0.19.1"
image = "0.25.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
# smooth-bevy-cameras = "0.11.0"
vox-format = "0.1.0"
